--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^18.14.0"
+  }
 }
