--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "example": "examples"
   },
   "scripts": {
-    "shell": "node ./shell.js",
-    "test": "node ./tests.js"
+    "shell": "ts-node src/Shell.ts",
+    "bundle": "npx webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^18.14.0"
+    "@types/node": "^18.14.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
