--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "coslang",
   "version": "1.0.0",
-  "main": "lexer.js",
-  "directories": {
-    "example": "examples"
-  },
   "scripts": {
-    "shell": "ts-node src/Shell.ts",
-    "bundle": "npx webpack --mode production"
+    "shell": "ts-node Shell.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +10,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^18.14.0",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
-  }
+    "typescript": "^4.9.5"
+  },
+  "module": "es2022"
 }
