--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "coslang",
   "version": "1.0.0",
   "scripts": {
-    "shell": "ts-node Shell.ts"
+    "shell": "ts-node Shell.ts",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "keywords": [],
   "author": "",
@@ -10,7 +13,9 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^18.14.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitepress": "^1.0.0-alpha.48",
+    "vue": "^3.2.47"
   },
   "module": "es2022"
 }
