--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^18.14.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "module": "es2022"
