--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -10,9 +10,9 @@ name: Deno
 
 on:
   push:
-    branches: ["main"]
+    branches: ["CosmicRewrite"]
   pull_request:
-    branches: ["main"]
+    branches: ["CosmicRewrite"]
 
 permissions:
   contents: read
